--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,6 +9,19 @@ p{
   text-align: center;
 }
 
+input {
+  display: block;
+  width: 100%;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: .25rem;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
